compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_if_condition_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_if_condition_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × if condition must be Bool
   ╭─[tests/fixtures/diagnostics/types/inference_if_condition_mismatch.ml:3:7]
 2 │   let flag = 1;
 3 │   dbg(if flag { "yes" } else { "no" })
   ·       ──────────────┬──────────────
   ·                     ╰── this if condition has type `i64`
 4 │ }
   ╰────
  help: use a Bool expression here
